// Vitest Snapshot v1

exports[`Components > ICollapsibleItem > computed > active > should add -active class when item is active 1`] = `
"<div class=\\"collapsible-item -active\\" name=\\"collapsible-item\\" tabindex=\\"0\\"><a id=\\"collapsible-item-heading-collapsible-item\\" class=\\"collapsible-header\\" role=\\"tab\\" aria-expanded=\\"true\\" aria-controls=\\"collapsible-item-content-collapsible-item\\" aria-describedby=\\"collapsible-item-content-collapsible-item\\">
    <!-- @slot header Slot for collapsible item header content --><i class=\\"icon\\"></i>
  </a>
  <transition-stub name=\\"expand\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" data-v-8631fbff=\\"\\">
    <div id=\\"collapsible-item-content-collapsible-item\\" class=\\"collapsible-body\\" role=\\"tabpanel\\" aria-hidden=\\"false\\" aria-labelledby=\\"collapsible-item-heading-collapsible-item\\">
      <div class=\\"content\\">
        <!-- @slot default Slot for default collapsible item content -->
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`Components > ICollapsibleItem > should render correctly 1`] = `
"<div class=\\"collapsible-item\\" name=\\"collapsible-item\\" tabindex=\\"0\\"><a id=\\"collapsible-item-heading-collapsible-item\\" class=\\"collapsible-header\\" role=\\"tab\\" aria-expanded=\\"false\\" aria-controls=\\"collapsible-item-content-collapsible-item\\" aria-describedby=\\"collapsible-item-content-collapsible-item\\">
    <!-- @slot header Slot for collapsible item header content --><i class=\\"icon\\"></i>
  </a>
  <transition-stub name=\\"expand\\" appear=\\"false\\" persisted=\\"false\\" css=\\"true\\" data-v-8631fbff=\\"\\">
    <div id=\\"collapsible-item-content-collapsible-item\\" class=\\"collapsible-body\\" role=\\"tabpanel\\" aria-hidden=\\"true\\" aria-labelledby=\\"collapsible-item-heading-collapsible-item\\" style=\\"display: none;\\">
      <div class=\\"content\\">
        <!-- @slot default Slot for default collapsible item content -->
      </div>
    </div>
  </transition-stub>
</div>"
`;
